force-app/main/default/objects/Opportunity/fields/Companys_Website__c.field-meta.xml
<CustomField>
    <fullName>Companys_Website__c</fullName>
    <label>Companys Website</label>
    <type>Url</type>
</CustomField>