force-app/main/default/objects/Opportunity/fields/Extended_Support_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Support_Cost__c</fullName>
    <label>Extended Support Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>