force-app/main/default/objects/Opportunity/fields/Is_Eligible_for_Extended_Support__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_for_Extended_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eligible for Extended Support</label>
    <type>Checkbox</type>
</CustomField>