force-app/main/default/objects/Opportunity/fields/Is_RenewAl_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_RenewAl_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RenewAl Order?</label>
    <type>Checkbox</type>
</CustomField>