force-app/main/default/objects/Opportunity/fields/Primary_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Contact Person)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>