force-app/main/default/objects/Opportunity/validationRules/MinimumAmountRule.validationRule-meta.xml
<ValidationRule>
    <fullName>MinimumAmountRule</fullName>
    <active>true</active>
    <description>Whenever a Sales Rep is creating/editing an Opportunity. Minimum Amount needs to be entered as $20000.</description>
    <errorConditionFormula>Amount  &lt; 20000</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Minimum Amount for an Opportunity should $20000.</errorMessage>
</ValidationRule>