force-app/main/default/objects/Opportunity/validationRules/SalesRepClosedDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SalesRepClosedDate</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR(CloseDate) &lt;&gt; YEAR(TODAY())</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Closed Date must be in the Current Year only</errorMessage>
</ValidationRule>