force-app/main/default/objects/Opportunity/validationRules/TracingNumberRule.validationRule-meta.xml
<ValidationRule>
    <fullName>TracingNumberRule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(TrackingNumber__c) &lt; 10</errorConditionFormula>
    <errorDisplayField>TrackingNumber__c</errorDisplayField>
    <errorMessage>Tracking Number cannot be below 10 digit.</errorMessage>
</ValidationRule>